Where we ended on Oct. 28 in FUNDAMENTALS 1 (not 2!)

--- a/1437DemoOfSDL/1437DemoOfSDL.vcxproj
+++ b/1437DemoOfSDL/1437DemoOfSDL.vcxproj
@@ -137,6 +137,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Color.h" />
     <ClInclude Include="SDLWrapper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
