--- a/1437DemoOfSDL/1437DemoOfSDL.vcxproj.filters
+++ b/1437DemoOfSDL/1437DemoOfSDL.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="SDLWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Color.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
